# my-iot-rs

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .ignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  LICENSE  Makefile  README.md  arm-unknown-linux-gnueabihf.Dockerfile  armv7-unknown-linux-gnueabihf.Dockerfile  book.toml  cross.Dockerfile  diesel.toml  install.sh  rustfmt.toml
.cargo/: config
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: build.yml  publish.yml  rust.yml
book/: SUMMARY.md  introduction.md  services.md
book/cookbook/: notify_tado_open_window.md  rise_and_shine.md  send_ring_doorbell_videos_to_telegram.md
book/introduction/: installation.md  publish-on-the-internet.md  run-at-system-startup.md  settings.md
book/services/: lua.md  rhai.md  ring.md  solar.md  tado.md  telegram.md
book/services/rhai/: telegram.md
docs/: aliases.js  index.html  search-index.js  settings.html  source-files.js
docs/doc/: search-index.js
docs/doc/my_iot/: all.html  fn.main.html  index.html  sidebar-items.js
docs/html/: 404.html  cookbook.html  index.html  introduction.html  print.html  searchindex.js  searchindex.json  services.html
docs/html/cookbook/: notify_tado_open_window.html  rise_and_shine.html  send_ring_doorbell_videos_to_telegram.html
docs/html/introduction/: installation.html  publish-on-the-internet.html  run-at-system-startup.html  settings.html
docs/html/services/: lua.html  rhai.html  ring.html  solar.html  tado.html  telegram.html
docs/implementors/askama/: trait.SizedTemplate.js  trait.Template.js
docs/implementors/lazy_static/: trait.LazyStatic.js
docs/implementors/markup/: trait.Render.js
docs/implementors/structopt/: trait.StructOpt.js  trait.StructOptInternal.js
docs/linkcheck/: cache.json
docs/my_iot/: all.html  constant.DEFAULT_DB_PATH.html  constant.DEFAULT_SETTINGS_PATH.html  fn.init_logging.html  fn.main.html  fn.spawn_dispatcher.html  fn.spawn_service.html  fn.spawn_services.html  fn.start_measurement_receiver.html  fn.start_readings_receiver.html  fn.start_service.html  fn.start_services.html  index.html  sidebar-items.js  struct.Opt.html  type.Result.html
docs/my_iot/consts/: constant.ANDROID_CHROME_192.html  constant.ANDROID_CHROME_512.html  constant.APPLE_TOUCH_ICON.html  constant.FAVICON.html  constant.FAVICON_16.html  constant.FAVICON_32.html  constant.USER_AGENT.html  index.html  sidebar-items.js
docs/my_iot/core/: index.html  sidebar-items.js
docs/my_iot/db/: constant.SCHEMA.html  fn.new.html  index.html  sidebar-items.js  struct.Db.html  trait.SqliteTypeName.html
docs/my_iot/errors/: index.html  sidebar-items.js  struct.InternalError.html
docs/my_iot/event/: index.html
docs/my_iot/format/: fn.human_format.html  index.html  sidebar-items.js
docs/my_iot/logger/: fn.init.html
docs/my_iot/logging/: fn.init.html  index.html  sidebar-items.js
docs/my_iot/measurement/: index.html  struct.Measurement.html
docs/my_iot/message/: constant._IMPL_DESERIALIZE_FOR_Type.html  enum.Type.html  index.html  struct.Message.html  struct.Reading.html
docs/my_iot/persistence/: fn.process_message.html  fn.send_messages.html  fn.spawn.html  index.html  sidebar-items.js
docs/my_iot/prelude/: derive.Deserialize.html  derive.Serialize.html  enum.LogLevel.html  enum.SecondsFormat.html  enum.StdResult.html  enum.Weekday.html  fn.sleep.html  index.html  macro.debug.html  macro.error.html  macro.format_err.html  macro.info.html  macro.log.html  macro.warn.html  sidebar-items.js  struct.Arc.html  struct.Connection.html  struct.Date.html  struct.DateTime.html  struct.Duration.html  struct.Error.html  struct.FixedOffset.html  struct.HashMap.html  struct.Mutex.html  struct.NaiveDate.html  struct.NaiveDateTime.html  struct.NaiveTime.html  struct.Receiver.html  struct.Scope.html  struct.Sender.html  (+14 more)
migrations/2019-11-04-150947_initial/: down.sql  up.sql
src/: consts.rs  core.rs  db.rs  errors.rs  event.rs  format.rs  logger.rs  logging.rs  main.rs  measurement.rs  message.rs  opts.rs  persistence.rs  prelude.rs  reading.rs  receiver.rs  sentry.rs  service.rs  services.rs  settings.rs  statics.rs  supervisor.rs  templates.rs  threading.rs  types.rs  units.rs  value.rs  values.rs  web.rs
src/core/: bus.rs  client.rs  connection.rs  db.rs  dispatcher.rs  error.rs  message.rs  persistence.rs  services.rs  si.rs  supervisor.rs  thread.rs  value.rs
src/services/: anomaly.rs  automator.rs  buienradar.rs  clock.rs  db.rs  helpers.rs  lua.rs  nest.rs  openweather.rs  philips_hue.rs  prelude.rs  rhai.rs  ring.rs  solar.rs  tado.rs  telegram.rs  threshold.rs  youless.rs
src/statics/: my-iot.webmanifest  sw.js
src/templates/: base.rs  index.rs  measurement.rs  navbar.rs  reading.rs  sensor.rs  services.rs  status.rs
src/web/: cached_content.rs  entity_tag.rs  if_none_match.rs  message_counter.rs  templates.rs  to_html_string.rs
templates/: actual.html  base.html  channel.html  events.html  index.html  navbar.html  reading.html  sensor.html  sensors.html  services.html  settings.html  value.html
templates/classes/: color.html  value.html
templates/includes/: navbar.html  periods.html  tile.html  timestamp.html  value.html
templates/partials/: actual.html  chart.html  navbar.html  sensor_tile.html  value.html
(+758 files in other folders)
