[package]
name = "my-iot"
description = "Yet another home automation"
version = "0.71.1"
authors = ["Pavel Perestoronin <eigenein@gmail.com>"]
edition = "2018"
homepage = "https://github.com/eigenein/my-iot-rs"
documentation = "https://eigenein.github.io/my-iot-rs/"
repository = "https://github.com/eigenein/my-iot-rs"
publish = true
readme = "README.md"
keywords = ["iot"]
categories = ["command-line-utilities"]
license = "MIT"

[badges]
is-it-maintained-issue-resolution = { repository = "eigenein/my-iot-rs" }
is-it-maintained-open-issues = { repository = "eigenein/my-iot-rs" }

[profile.release]
lto = "fat"
codegen-units = 1

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.5", features = ["serde"] }
reqwest = { version = "0.10", features = ["rustls-tls", "blocking", "gzip", "json"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
regex = "1"
structopt = "0.3"
rusqlite = { version = "0.20", features = ["bundled"] }
askama = { version = "0.10", features = ["serde-json"] }
itertools = "0.9"
rlua = "0.17"
spa = "0.2"
serde_regex = "0.4"
seahash = "4"
crossbeam = "0.7"
rocket = { version = "0.4", default-features = false }
rocket_contrib = "0.4"
simplelog = "0.8"
slug = "0.1"
