[package]
name = "my-iot"
description = "Yet another home automation"
version = "0.94.9"
authors = ["Pavel Perestoronin <eigenein@gmail.com>"]
edition = "2018"
homepage = "https://github.com/eigenein/my-iot-rs"
documentation = "https://eigenein.github.io/my-iot-rs/"
repository = "https://github.com/eigenein/my-iot-rs"
publish = true
readme = "README.md"
keywords = ["iot"]
categories = ["command-line-utilities"]
license = "MIT"

[badges]
is-it-maintained-issue-resolution = { repository = "eigenein/my-iot-rs" }
is-it-maintained-open-issues = { repository = "eigenein/my-iot-rs" }

[profile.release]
lto = "fat"
codegen-units = 1

[dependencies]
chrono = { version = "^0.4.13", features = ["serde"] }
chrono-tz = { version = "^0.5.2", features = ["serde"] }
reqwest = { version = "^0.10.6", features = ["rustls-tls", "gzip", "json"], default-features = false }
log = "^0.4.11"
serde = { version = "^1.0.114", features = ["derive"] }
serde_json = "^1.0.56"
toml = "^0.5.6"
regex = "^1.3.9"
structopt = "^0.3.15"
askama = { version = "^0.10.2", features = ["serde-json"] }
itertools = "^0.9.0"
spa = "^0.2.0"
serde_regex = "^1.1.0"
seahash = "^4.0.1"
rocket = { version = "^0.4.5", default-features = false }
rocket_contrib = { version = "^0.4.5", features = ["json"], default-features = false }
simplelog = "^0.8.0"
slug = "^0.1.4"
lazy_static = "^1.4.0"
rhai = { version = "^0.17.0", features = ["sync", "no_module"] }
bytes = "^0.5.6"
statrs = "^0.13.0"
bincode = "^1.3.1"
async-std = { version = "^1.6.2", features = ["attributes", "tokio02"] }
url = "^2.1.1"
futures = "^0.3.5"
mdns = "^1.1.0"

[dependencies.sqlx]
version = "0.4.0-beta.1"
default_features = false
features = ["runtime-async-std", "sqlite"]
