[package]
name = "my-iot"
description = "Yet another home automation"
version = "0.96.1"
authors = ["Pavel Perestoronin <eigenein@gmail.com>"]
edition = "2018"
homepage = "https://github.com/eigenein/my-iot-rs"
documentation = "https://eigenein.github.io/my-iot-rs/"
repository = "https://github.com/eigenein/my-iot-rs"
publish = true
readme = "README.md"
keywords = ["iot"]
categories = ["command-line-utilities"]
license = "MIT"

[badges]
is-it-maintained-issue-resolution = { repository = "eigenein/my-iot-rs" }
is-it-maintained-open-issues = { repository = "eigenein/my-iot-rs" }

[profile.release]
lto = "fat"
codegen-units = 1

[dependencies.async-std]
version = "1.6.2"
features = ["std", "attributes"]
default-features = false

[dependencies.sqlx]
version = "0.4.0-beta.1"
features = ["runtime-async-std", "sqlite"]
default-features = false

[dependencies.surf]
version = "2.0.0-alpha.5"
features = ["native-client", "encoding"]
default-features = false

[dependencies.chrono]
version = "0.4.13"
features = ["serde"]
default-features = false

[dependencies.chrono-tz]
version = "0.5.2"
features = ["serde"]
default-features = false

[dependencies.log]
version = "0.4.11"
default-features = false

[dependencies.serde]
version = "1.0.114"
features = ["std", "derive"]
default-features = false

[dependencies.askama]
version = "0.10.2"
features = ["serde-json"]
default-features = false

[dependencies.rocket]
version = "0.4.5"
default-features = false

[dependencies.rocket_contrib]
version = "0.4.5"
features = ["json"]
default-features = false

[dependencies.rhai]
version = "0.18.3"
features = ["sync", "no_module"]
default-features = false

[dependencies.futures]
version = "0.3.5"
default-features = false

[dependencies.sentry]
version = "0.20.1"
features = ["backtrace", "contexts", "failure", "panic", "transport", "log", "anyhow"]
default-features = false

[dependencies]
serde_json = "1.0.56"
toml = "0.5.6"
regex = "1.3.9"
structopt = "0.3.15"
itertools = "0.9.0"
spa = "0.2.0"
serde_regex = "1.1.0"
seahash = "4.0.1"
simplelog = "0.8.0"
slug = "0.1.4"
lazy_static = "1.4.0"
bytes = "0.5.6"
statrs = "0.13.0"
bincode = "1.3.1"
mdns = "1.1.0"
anyhow = "1.0.32"
